# hydro-ml

./: .gitignore  05-model-training copy.ipynb  README.MD  data_cleaning.ipynb  hyperparameter_tuning.ipynb  pipeline.ipynb  pipeline_with_MI.ipynb  pipeline_with_pca.ipynb  pyproject.toml  test3.ipynb  test4.ipynb  test5.ipynb  test6.ipynb  univariate_test.ipynb
analysis/: analysis_of_variables.ipynb
app/: app.py
app/pages/: 01_Train.py  02_Visualization.py
config/: __init__.py  load_data.py
data/: README.MD  small_synthetic_data.csv
mlruns/0/: meta.yaml
mlruns/0/112a0eeaafca454c857f8b63a73aef4e/: meta.yaml
mlruns/0/41f6b0abe5cc4c69af68d92fd30847b9/: meta.yaml
mlruns/0/43d09b7edc1b41e1b85921b4949acca2/: meta.yaml
mlruns/0/5a5641f30c9a4fcc8f131815a1f97abe/: meta.yaml
mlruns/0/6277689d625c49dfa68091f9b25beb81/: meta.yaml
mlruns/0/71a2dd9ad7b24300b3c244e02ae46d41/: meta.yaml
mlruns/0/77b571d49f744d059418e811a210e405/: meta.yaml
mlruns/1/: meta.yaml
mlruns/10/: meta.yaml
mlruns/11/: meta.yaml
mlruns/2/: meta.yaml
mlruns/3/: meta.yaml
mlruns/4/: meta.yaml
mlruns/5/: meta.yaml
mlruns/6/: meta.yaml
mlruns/7/: meta.yaml
mlruns/8/: meta.yaml
mlruns/9/: meta.yaml
model_testing/: univariate_test.ipynb
models/: Baseline.py  FCN.py  LSTM.py  LSTM2.py  LSTM_A.py  T_Model.py  __init___.py  model.py  new_models.py
notebooks/: 01-data-cleaning.ipynb  02-eda-visualization.ipynb  03-eda-features.ipynb  04-baseline-model.ipynb  05-model-training.ipynb  06-model-evaluation.ipynb  attention.ipynb  baseline.ipynb  creating_model.ipynb  data_cleaning.ipynb  pipeline.ipynb  testing_pytorch_forecasting.ipynb
reports/: glossaries.tex  main.ist  main.tex  references.bib  title_page.tex
reports/appendix/: Code.tex
src/: app.py  baseline.py  data.py  evaluate.py  experiment.py  models.py  train.py
src/model/: baseline.py  models.py
src/pages/: 01_Train.py  01_test.py  02_Visualization.py  02_test.py
(+2644 files in other folders)
